# oxideav-png

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: libpng_encode_oxideav_decode.rs  oxideav_encode_libpng_decode.rs  png_self_roundtrip.rs
fuzz/src/: lib.rs
src/: apng.rs  chunk.rs  container.rs  decoder.rs  encoder.rs  error.rs  filter.rs  image.rs  lib.rs  registry.rs
tests/: adam7_and_subbyte.rs  apng_roundtrip.rs  container_probe.rs  crc_validation.rs  decode_encode_roundtrip.rs  decode_png_to_rgba.rs  encoder_options.rs  external_roundtrip.rs
