[package]
name = "oxideav-png"
version = "0.1.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-png"
authors = ["Mark Karpeles"]
description = "Pure-Rust PNG + APNG decoder and encoder for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-png"
keywords = ["multimedia", "image", "png", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"
miniz_oxide = "0.9"
