[package]
name = "oxideav-png"
version = "0.1.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-png"
authors = ["Mark Karpeles"]
description = "Pure-Rust PNG + APNG decoder and encoder for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-png"
keywords = ["multimedia", "image", "png", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-png` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes a free-standing
# `decode_png` / `encode_png_image` / `decode_apng` / `encode_apng`
# API plus local `PngImage` / `PngError` types and never references
# `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }
miniz_oxide = "0.9"

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder / demuxer / muxer trait
# implementations against `oxideav-core` so the crate can plug into the
# `oxideav` framework registry. Default-on; turn off for image-library
# use-cases that just want the standalone `decode_png` API.
registry = ["dep:oxideav-core"]

[dev-dependencies]
# libpng interop for the external roundtrip test (tests/external_roundtrip.rs).
# Loaded via dlopen at test time — no `*-sys` crate, no libpng source pulled
# into the workspace. The test skips silently when libpng isn't installed.
libloading = "0.8"
